# mercadolocal

./: .gitignore  README.md
admin/: index.html  package-lock.json  package.json  tailwind.config.js
appclient/: README.md  pubspec.yaml
appdelivery/: README.md  pubspec.yaml
backend/: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
backend/ads/: admin.py  models.py  serializers.py  urls.py  views.py
backend/ads/migrations/: 0001_initial.py  0002_alter_ad_store.py
backend/core/: api.py  exceptions.py  pagination.py  settings.py  urls.py
backend/core/management/commands/: flush_fake_data.py  seed_fake_data.py
backend/dashboard/: serializers.py  urls.py  views.py
backend/deliveries/: admin.py  models.py  serializers.py  urls.py  views.py
backend/deliveries/migrations/: 0001_initial.py
backend/orders/: admin.py  models.py  serializers.py  urls.py  views.py
backend/orders/migrations/: 0001_initial.py
backend/products/: admin.py  models.py  serializers.py  urls.py  views.py
backend/products/management/commands/: seed_categories.py
backend/products/migrations/: 0001_initial.py  0002_alter_productimage_image.py
backend/stores/: admin.py  models.py  serializers.py  urls.py  views.py
backend/stores/management/commands/: seed_store_categories.py
backend/stores/migrations/: 0001_initial.py  0002_alter_store_logo.py
backend/users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_customuser_avatar.py
frontend/: index.html  package-lock.json  (+3 more)
(+162 files in other folders)
