[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "django (==5.2.12)",
    "djangorestframework (==3.15.2)",
    "django-cors-headers (==4.6.0)",
    "psycopg2-binary (==2.9.10)",
    "python-dotenv (==1.0.1)",
    "djangorestframework-simplejwt (==5.4.0)",
    "django-storages (==1.14.4)",
    "boto3 (==1.37.5)",
    "pillow (==11.1.0)",
    "gunicorn (==23.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=8.0.1,<9.0.0)"
]
